compiler/testData/diagnostics/tests/typeParameters/deprecatedSyntax.kt
// RUN_PIPELINE_TILL: FRONTEND
// FIR_IDENTICAL
fun foo<!DEPRECATED_TYPE_PARAMETER_SYNTAX!><T><!>() {
    fun bar<!DEPRECATED_TYPE_PARAMETER_SYNTAX!><T><!>() {}
}